# devtoolkit

./: .editorconfig  .shellcheckrc  CONTRIBUTING.md  Cargo.toml  Makefile  Makefile.mk  README.md  devtoolkit.code-workspace  tree  watch.sh
.config/: dependencies.txt
_bin/: devtoolkit
_bin/sh/git/: sshkcheck.sh  sshkgen.sh
_bin/sh/utils/: fix-permissions.sh
_bin/wsl/: New-WslConfig.ps1
_bin/zsh/git/: config.zsh  sshkcheck.zsh  sshkgen.zsh
_bin/zsh/node/: install.zsh  pm-install.zsh
_bin/zsh/utils/: fix-permissions.zsh
_scripts/core/: _checks.sh  _checks.zsh  _logging.sh  _logging.zsh  _print-header.sh
_scripts/git/: config.help.sh  config.sh
_scripts/github/: ssh-key-check.help.sh  ssh-key-check.sh  ssh-key-gen.help.sh  ssh-key-gen.sh
_scripts/github/ssh-key-check/: _help.sh  _prompt-key-path.sh  _prompt-private-key-path.sh
_scripts/node/: install.sh
_scripts/node/nvm/: install.sh
_scripts/node/pm/: install.sh
_scripts/sys/: setup.sh
devtoolkit/: env.sh
devtoolkit/__completions/: devtoolkit-log-theme.sh
devtoolkit/commands/: command_template.sh
devtoolkit/libs/: _print-header.sh
devtoolkit/utils/: clear-console.sh  clear_console.sh  cli.sh  config.sh  confirm.sh  io.sh  log-theme.sh  log.sh  logs.sh  read-choice.sh  read.sh  set-log-emojis.sh  tty.sh
docs/: roadmap.md  system-dependencies.md
docs/AI-suggestions/: AI-1.md  AI-2.md
docs/contributing/: conventions.md
recommendations/: editor-vscode.yml  main.yml  node.yml  sys-ubuntu.yml
scripts/: shellcheck-clipboard.sh  shellcheck.sh
snap/: snapcraft.yml
(+15 files in other folders)
