[package]
name = "devtoolkit-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A hypothetical Rust-based CLI component for devtoolkit."
license = "MIT"
repository = "https://github.com/ctrlmaniac/devtoolkit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI argument parsing
clap = { version = "4.4.0", features = ["derive"] }

# Serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Asynchronous runtime
tokio = { version = "1.20.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Configuration management
config = { version = "0.13", features = ["toml"] }
